Unordered(ul) and Ordered(ol) list in HTML

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,22 @@
-<h1>Demonstration of HTML tags</h1>
+<title>List in HTML</title>
 
-<h1>Avengers</h1>
+<ul>
+    <li>Game</li>
+    <li>Same</li>
+    <li>Name</li>
+</ul>
 
-<h2>Iron Man</h2>
-<p>Also goes by the name 
-  <b>Tony Stark</b>
-</p>
 
-<h2>Captain America</h2>
-<p>Also goes by the name 
-  <b>Steve Rogers</b>
-</p>
+<ol>
+    <li>Game</li>
+    <li>Same</li>
+    <li>Name</li>
+</ol>
 
-<h2>Iron Man</h2>
-<p>Also goes by the name 
-  <b>Bruce Banner</b>
-</p>
+
+<ol type="A">
+    <li>Game</li>
+    <li>Same</li>
+    <li>Name</li>
+
+</ol>
