Basic HTML portfolio

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,41 @@
-<title>List in HTML</title>
+<h1>Narendra Kachare</h1>
+<p>It's just beginning :)</p>
+
+<img src="assets\1.jpg" alt="IMAGE">
+
+<h2>Education</h2>
 
 <ul>
-    <li>Game</li>
-    <li>Same</li>
-    <li>Name</li>
+    <li><b>10th Class (SSC)</b> : 78.60%</li>
+    <li><b>12 Class (HSC)</b> : 64.92%</li>
+    <li><b>Bachelor in Engineering (Mech)</b> : 8.19 CGPA</li>
 </ul>
 
 
-<ol>
-    <li>Game</li>
-    <li>Same</li>
-    <li>Name</li>
-</ol>
+<h2>Skills</h2>
+<ul>
+    <li>HTML, CSS, JavaScript</li>
+    <li>Node.js, SQL</li>
+    <li>Java, Python</li>
+    <li>C,C++</li>
+</ul>
 
 
-<ol type="A">
-    <li>Game</li>
-    <li>Same</li>
-    <li>Name</li>
+<h2>Hobbies</h2>
+<ul>
+    <li>Swimming</li>
+    <li>Waching Movies</li>
+    <li>Reading</li>
+</ul>
 
-</ol>
+
+<h2>Contact Me</h2>
+<ul>
+    <li><b>Email : </b>narendrakachare7"&#64;"gmail.com</li>
+    <li><a href="http://linkedin.com/in/narendra-kachare-36236229a">Linkedin</a></li>
+    
+</ul>
+
+<p>Made by Narendra Kachare</p>
+
+
