Block & Inline element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,41 +1,21 @@
-<h1>Narendra Kachare</h1>
-<p>It's just beginning :)</p>
+<h1>Demonstration of Inline vs Block element</h1>
 
-<img src="assets\1.jpg" alt="IMAGE">
+<!--Header tag :  Block Element (Generate new line for each tag at each time ) -->
+<h1>Marvellous Infosystem</h1>
+<h2>Narendra Kachare</h2>
 
-<h2>Education</h2>
-
-<ul>
-    <li><b>10th Class (SSC)</b> : 78.60%</li>
-    <li><b>12 Class (HSC)</b> : 64.92%</li>
-    <li><b>Bachelor in Engineering (Mech)</b> : 8.19 CGPA</li>
-</ul>
+<!--Paragraph tag :  Block Element -->
+<p>Marvellous Infosystem</p>
+<p>Narendra Kachare</p>
 
 
-<h2>Skills</h2>
-<ul>
-    <li>HTML, CSS, JavaScript</li>
-    <li>Node.js, SQL</li>
-    <li>Java, Python</li>
-    <li>C,C++</li>
-</ul>
+<!--Image tag :  Inline Element -->
+<img src="https://imageio.forbes.com/specials-images/imageserve/5fd00ea644cd62376ce2b6c1/In-this-photo-illustration-a-13inch-Macbook-pro-seen---/960x0.jpg?height=474&width=711&fit=bounds" alt="Mac">
+<img src="https://bodomama.com/wp-content/uploads/2022/01/apple-fruit.jpeg" alt="Apple">
 
-
-<h2>Hobbies</h2>
-<ul>
-    <li>Swimming</li>
-    <li>Waching Movies</li>
-    <li>Reading</li>
-</ul>
-
-
-<h2>Contact Me</h2>
-<ul>
-    <li><b>Email : </b>narendrakachare7"&#64;"gmail.com</li>
-    <li><a href="http://linkedin.com/in/narendra-kachare-36236229a">Linkedin</a></li>
-    
-</ul>
-
-<p>Made by Narendra Kachare</p>
+<!--Anchor tag :  Inline Element (Use unused space of previous tag) -->
+<a href="http://www.google.com">Google</a>
+<a href="http://www.facebook.com">Facebook</a>
+<a href="http://www.instagram.com">Instagram</a>
 
 
