Div vs Span element

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,20 @@
-<h1>Demonstration of Inline vs Block element</h1>
+<h1>Demonstration of div element (Content Division Element i.e Elements is used to Divide content) </h1>
 
-<!--Header tag :  Block Element (Generate new line for each tag at each time ) -->
-<h1>Marvellous Infosystem</h1>
-<h2>Narendra Kachare</h2>
+<!-- Div tag : Block element -->
+<div>
+    <a href="http://www.google.com">Google</a>
+    <a href="http://www.facebook.com">Facebook</a>
+</div>
 
-<!--Paragraph tag :  Block Element -->
-<p>Marvellous Infosystem</p>
-<p>Narendra Kachare</p>
-
-
-<!--Image tag :  Inline Element -->
-<img src="https://imageio.forbes.com/specials-images/imageserve/5fd00ea644cd62376ce2b6c1/In-this-photo-illustration-a-13inch-Macbook-pro-seen---/960x0.jpg?height=474&width=711&fit=bounds" alt="Mac">
-<img src="https://bodomama.com/wp-content/uploads/2022/01/apple-fruit.jpeg" alt="Apple">
-
-<!--Anchor tag :  Inline Element (Use unused space of previous tag) -->
-<a href="http://www.google.com">Google</a>
-<a href="http://www.facebook.com">Facebook</a>
 <a href="http://www.instagram.com">Instagram</a>
 
 
+
+<h1>Demonstration of span element</h1>
+<!-- Span tag : Inline element -->
+<span>
+    <a href="http://www.google.com">Google</a>
+    <a href="http://www.facebook.com">Facebook</a>
+</span>
+
+<a href="http://www.instagram.com">Instagram</a>
