--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,18 @@
-<h1>Demonstration of div element (Content Division Element i.e Elements is used to Divide content) </h1>
-
-<!-- Div tag : Block element -->
-<div>
-    <a href="http://www.google.com">Google</a>
-    <a href="http://www.facebook.com">Facebook</a>
-</div>
-
-<a href="http://www.instagram.com">Instagram</a>
+<h1>Demonstration of Sub(lower) & Sup(Upper) tag</h1>
 
 
+<h1></h1>
 
-<h1>Demonstration of span element</h1>
-<!-- Span tag : Inline element -->
-<span>
-    <a href="http://www.google.com">Google</a>
-    <a href="http://www.facebook.com">Facebook</a>
-</span>
+<ol>
+    <li>(a+b)<sup>2</sup> = a <sup>2</sup> + b <sup>2</sup> + 2ab</li>
 
-<a href="http://www.instagram.com">Instagram</a>
+    <li>(a+b) <sup>3</sup> = a<sup>3</sup> + b<sup>3</sup> + 3a<sup>2</sup>b + 3ab<sup>2</sup></li>
+
+    <li>a<sup>2</sup> - b<sup>2</sup> = (a+b)(a-b)</li>
+
+    <li>Water : H<sub>2</sub>O</li>
+
+    <li>Pythagoras theoram says : a<sup>2</sup> + b<sup>2</sup> = c<sup>2</sup></li>
+</ol>
+
+
